Refactored many duplicate implementations of CSS classes Use of newer tailwind child and assorted selectors Improved readability of some long tailwind class strings Minor fixes to various minor UI problems Fixed access grant manager details folder name Closes GSI-1835 Closes GSI-1836 Closes GSI-1837

--- a/src/app/portal/features/account-button/account-button.component.scss
+++ b/src/app/portal/features/account-button/account-button.component.scss
@@ -1,14 +1,5 @@
 @use '@angular/material' as mat;
 
-button {
-  @include mat.icon-button-overrides(
-    (
-      icon-color: var(--mat-sys-on-primary),
-      state-layer-color: var(--mat-sys-on-primary),
-    )
-  );
-}
-
 .mat-mdc-menu-item .mat-icon-no-color.text-secondary {
   color: var(--mat-sys-secondary);
 }
